// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App search on error should show an error: default 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "red",
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        {
          "columnGap": 16,
          "flexDirection": "row",
          "padding": 16,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "blue",
            "borderColor": "lightgray",
            "borderRadius": 36,
            "borderWidth": 2,
            "height": 72,
            "width": 72,
          }
        }
      />
      <View
        style={
          {
            "backgroundColor": "red",
            "borderColor": "lightgray",
            "borderRadius": 12,
            "borderWidth": 2,
            "height": 24,
            "width": 24,
          }
        }
      />
      <View
        style={
          {
            "backgroundColor": "yellow",
            "borderColor": "lightgray",
            "borderRadius": 12,
            "borderWidth": 2,
            "height": 24,
            "width": 24,
          }
        }
      />
      <View
        style={
          {
            "backgroundColor": "green",
            "borderColor": "lightgray",
            "borderRadius": 12,
            "borderWidth": 2,
            "height": 24,
            "width": 24,
          }
        }
      />
    </View>
    <RCTScrollView
      contentContainerStyle={
        {
          "alignItems": "center",
          "padding": 16,
          "rowGap": 16,
        }
      }
      keyboardDismissMode="on-drag"
      style={
        {
          "backgroundColor": "rgba(0, 0, 0, 0.25)",
        }
      }
    >
      <View>
        <View
          style={
            {
              "alignItems": "center",
              "aspectRatio": 1,
              "backgroundColor": "#333333",
              "borderColor": "lightgray",
              "borderWidth": 16,
              "justifyContent": "center",
              "width": "75%",
            }
          }
        />
        <Text
          style={
            {
              "backgroundColor": "#333333",
              "color": "white",
              "padding": 16,
              "textAlign": "center",
              "width": "75%",
            }
          }
        />
      </View>
    </RCTScrollView>
    <View
      style={
        {
          "alignItems": "center",
          "columnGap": 16,
          "flexDirection": "row",
          "padding": 16,
        }
      }
    >
      <TextInput
        autoCorrect={false}
        defaultValue=""
        inputMode="search"
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        returnKeyType="search"
        selectionColor="black"
        style={
          [
            {
              "flex": 1,
            },
            {
              "backgroundColor": "#52ae5f",
              "color": "black",
              "padding": 16,
            },
          ]
        }
        testID="search-query-input"
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
        testID="search-button"
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#333333",
              "borderRadius": 24,
              "height": 48,
              "justifyContent": "center",
              "width": 48,
            }
          }
        >
          <SvgMock
            height={24}
            width={24}
          />
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`App search on error should show an error: error 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "red",
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        {
          "columnGap": 16,
          "flexDirection": "row",
          "padding": 16,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "blue",
            "borderColor": "lightgray",
            "borderRadius": 36,
            "borderWidth": 2,
            "height": 72,
            "width": 72,
          }
        }
      />
      <View
        style={
          {
            "backgroundColor": "red",
            "borderColor": "lightgray",
            "borderRadius": 12,
            "borderWidth": 2,
            "height": 24,
            "width": 24,
          }
        }
      />
      <View
        style={
          {
            "backgroundColor": "yellow",
            "borderColor": "lightgray",
            "borderRadius": 12,
            "borderWidth": 2,
            "height": 24,
            "width": 24,
          }
        }
      />
      <View
        style={
          {
            "backgroundColor": "green",
            "borderColor": "lightgray",
            "borderRadius": 12,
            "borderWidth": 2,
            "height": 24,
            "width": 24,
          }
        }
      />
    </View>
    <RCTScrollView
      contentContainerStyle={
        {
          "alignItems": "center",
          "padding": 16,
          "rowGap": 16,
        }
      }
      keyboardDismissMode="on-drag"
      style={
        {
          "backgroundColor": "rgba(0, 0, 0, 0.25)",
        }
      }
    >
      <View>
        <View
          style={
            {
              "alignItems": "center",
              "aspectRatio": 1,
              "backgroundColor": "#333333",
              "borderColor": "lightgray",
              "borderWidth": 16,
              "justifyContent": "center",
              "width": "75%",
            }
          }
        >
          <SvgMock
            height={48}
            width={48}
          />
        </View>
        <Text
          style={
            {
              "backgroundColor": "#333333",
              "color": "white",
              "padding": 16,
              "textAlign": "center",
              "width": "75%",
            }
          }
        />
      </View>
    </RCTScrollView>
    <View
      style={
        {
          "alignItems": "center",
          "columnGap": 16,
          "flexDirection": "row",
          "padding": 16,
        }
      }
    >
      <TextInput
        autoCorrect={false}
        defaultValue="Some query"
        inputMode="search"
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        returnKeyType="search"
        selectionColor="black"
        style={
          [
            {
              "flex": 1,
            },
            {
              "backgroundColor": "#52ae5f",
              "color": "black",
              "padding": 16,
            },
          ]
        }
        testID="search-query-input"
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
        testID="search-button"
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#333333",
              "borderRadius": 24,
              "height": 48,
              "justifyContent": "center",
              "width": 48,
            }
          }
        >
          <SvgMock
            height={24}
            width={24}
          />
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`App search on error should show an error: loading 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "red",
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        {
          "columnGap": 16,
          "flexDirection": "row",
          "padding": 16,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "blue",
            "borderColor": "lightgray",
            "borderRadius": 36,
            "borderWidth": 2,
            "height": 72,
            "width": 72,
          }
        }
      />
      <View
        style={
          {
            "backgroundColor": "red",
            "borderColor": "lightgray",
            "borderRadius": 12,
            "borderWidth": 2,
            "height": 24,
            "width": 24,
          }
        }
      />
      <View
        style={
          {
            "backgroundColor": "yellow",
            "borderColor": "lightgray",
            "borderRadius": 12,
            "borderWidth": 2,
            "height": 24,
            "width": 24,
          }
        }
      />
      <View
        style={
          {
            "backgroundColor": "green",
            "borderColor": "lightgray",
            "borderRadius": 12,
            "borderWidth": 2,
            "height": 24,
            "width": 24,
          }
        }
      />
    </View>
    <RCTScrollView
      contentContainerStyle={
        {
          "alignItems": "center",
          "padding": 16,
          "rowGap": 16,
        }
      }
      keyboardDismissMode="on-drag"
      style={
        {
          "backgroundColor": "rgba(0, 0, 0, 0.25)",
        }
      }
    >
      <View>
        <View
          style={
            {
              "alignItems": "center",
              "aspectRatio": 1,
              "backgroundColor": "#333333",
              "borderColor": "lightgray",
              "borderWidth": 16,
              "justifyContent": "center",
              "width": "75%",
            }
          }
        >
          <ActivityIndicator
            color="white"
            size="large"
          />
        </View>
        <Text
          style={
            {
              "backgroundColor": "#333333",
              "color": "white",
              "padding": 16,
              "textAlign": "center",
              "width": "75%",
            }
          }
        />
      </View>
    </RCTScrollView>
    <View
      style={
        {
          "alignItems": "center",
          "columnGap": 16,
          "flexDirection": "row",
          "padding": 16,
        }
      }
    >
      <TextInput
        autoCorrect={false}
        defaultValue="Some query"
        inputMode="search"
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        returnKeyType="search"
        selectionColor="black"
        style={
          [
            {
              "flex": 1,
            },
            {
              "backgroundColor": "#52ae5f",
              "color": "black",
              "padding": 16,
            },
          ]
        }
        testID="search-query-input"
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
        testID="search-button"
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#333333",
              "borderRadius": 24,
              "height": 48,
              "justifyContent": "center",
              "width": 48,
            }
          }
        >
          <SvgMock
            height={24}
            width={24}
          />
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`App search on success should load Pokemon: default 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "red",
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        {
          "columnGap": 16,
          "flexDirection": "row",
          "padding": 16,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "blue",
            "borderColor": "lightgray",
            "borderRadius": 36,
            "borderWidth": 2,
            "height": 72,
            "width": 72,
          }
        }
      />
      <View
        style={
          {
            "backgroundColor": "red",
            "borderColor": "lightgray",
            "borderRadius": 12,
            "borderWidth": 2,
            "height": 24,
            "width": 24,
          }
        }
      />
      <View
        style={
          {
            "backgroundColor": "yellow",
            "borderColor": "lightgray",
            "borderRadius": 12,
            "borderWidth": 2,
            "height": 24,
            "width": 24,
          }
        }
      />
      <View
        style={
          {
            "backgroundColor": "green",
            "borderColor": "lightgray",
            "borderRadius": 12,
            "borderWidth": 2,
            "height": 24,
            "width": 24,
          }
        }
      />
    </View>
    <RCTScrollView
      contentContainerStyle={
        {
          "alignItems": "center",
          "padding": 16,
          "rowGap": 16,
        }
      }
      keyboardDismissMode="on-drag"
      style={
        {
          "backgroundColor": "rgba(0, 0, 0, 0.25)",
        }
      }
    >
      <View>
        <View
          style={
            {
              "alignItems": "center",
              "aspectRatio": 1,
              "backgroundColor": "#333333",
              "borderColor": "lightgray",
              "borderWidth": 16,
              "justifyContent": "center",
              "width": "75%",
            }
          }
        />
        <Text
          style={
            {
              "backgroundColor": "#333333",
              "color": "white",
              "padding": 16,
              "textAlign": "center",
              "width": "75%",
            }
          }
        />
      </View>
    </RCTScrollView>
    <View
      style={
        {
          "alignItems": "center",
          "columnGap": 16,
          "flexDirection": "row",
          "padding": 16,
        }
      }
    >
      <TextInput
        autoCorrect={false}
        defaultValue=""
        inputMode="search"
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        returnKeyType="search"
        selectionColor="black"
        style={
          [
            {
              "flex": 1,
            },
            {
              "backgroundColor": "#52ae5f",
              "color": "black",
              "padding": 16,
            },
          ]
        }
        testID="search-query-input"
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
        testID="search-button"
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#333333",
              "borderRadius": 24,
              "height": 48,
              "justifyContent": "center",
              "width": 48,
            }
          }
        >
          <SvgMock
            height={24}
            width={24}
          />
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`App search on success should load Pokemon: loading 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "red",
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        {
          "columnGap": 16,
          "flexDirection": "row",
          "padding": 16,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "blue",
            "borderColor": "lightgray",
            "borderRadius": 36,
            "borderWidth": 2,
            "height": 72,
            "width": 72,
          }
        }
      />
      <View
        style={
          {
            "backgroundColor": "red",
            "borderColor": "lightgray",
            "borderRadius": 12,
            "borderWidth": 2,
            "height": 24,
            "width": 24,
          }
        }
      />
      <View
        style={
          {
            "backgroundColor": "yellow",
            "borderColor": "lightgray",
            "borderRadius": 12,
            "borderWidth": 2,
            "height": 24,
            "width": 24,
          }
        }
      />
      <View
        style={
          {
            "backgroundColor": "green",
            "borderColor": "lightgray",
            "borderRadius": 12,
            "borderWidth": 2,
            "height": 24,
            "width": 24,
          }
        }
      />
    </View>
    <RCTScrollView
      contentContainerStyle={
        {
          "alignItems": "center",
          "padding": 16,
          "rowGap": 16,
        }
      }
      keyboardDismissMode="on-drag"
      style={
        {
          "backgroundColor": "rgba(0, 0, 0, 0.25)",
        }
      }
    >
      <View>
        <View
          style={
            {
              "alignItems": "center",
              "aspectRatio": 1,
              "backgroundColor": "#333333",
              "borderColor": "lightgray",
              "borderWidth": 16,
              "justifyContent": "center",
              "width": "75%",
            }
          }
        >
          <ActivityIndicator
            color="white"
            size="large"
          />
        </View>
        <Text
          style={
            {
              "backgroundColor": "#333333",
              "color": "white",
              "padding": 16,
              "textAlign": "center",
              "width": "75%",
            }
          }
        />
      </View>
    </RCTScrollView>
    <View
      style={
        {
          "alignItems": "center",
          "columnGap": 16,
          "flexDirection": "row",
          "padding": 16,
        }
      }
    >
      <TextInput
        autoCorrect={false}
        defaultValue="Some query"
        inputMode="search"
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        returnKeyType="search"
        selectionColor="black"
        style={
          [
            {
              "flex": 1,
            },
            {
              "backgroundColor": "#52ae5f",
              "color": "black",
              "padding": 16,
            },
          ]
        }
        testID="search-query-input"
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
        testID="search-button"
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#333333",
              "borderRadius": 24,
              "height": 48,
              "justifyContent": "center",
              "width": 48,
            }
          }
        >
          <SvgMock
            height={24}
            width={24}
          />
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`App search on success should load Pokemon: success 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "red",
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        {
          "columnGap": 16,
          "flexDirection": "row",
          "padding": 16,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "blue",
            "borderColor": "lightgray",
            "borderRadius": 36,
            "borderWidth": 2,
            "height": 72,
            "width": 72,
          }
        }
      />
      <View
        style={
          {
            "backgroundColor": "red",
            "borderColor": "lightgray",
            "borderRadius": 12,
            "borderWidth": 2,
            "height": 24,
            "width": 24,
          }
        }
      />
      <View
        style={
          {
            "backgroundColor": "yellow",
            "borderColor": "lightgray",
            "borderRadius": 12,
            "borderWidth": 2,
            "height": 24,
            "width": 24,
          }
        }
      />
      <View
        style={
          {
            "backgroundColor": "green",
            "borderColor": "lightgray",
            "borderRadius": 12,
            "borderWidth": 2,
            "height": 24,
            "width": 24,
          }
        }
      />
    </View>
    <RCTScrollView
      contentContainerStyle={
        {
          "alignItems": "center",
          "padding": 16,
          "rowGap": 16,
        }
      }
      keyboardDismissMode="on-drag"
      style={
        {
          "backgroundColor": "rgba(0, 0, 0, 0.25)",
        }
      }
    >
      <View>
        <View
          style={
            {
              "alignItems": "center",
              "aspectRatio": 1,
              "backgroundColor": "#333333",
              "borderColor": "lightgray",
              "borderWidth": 16,
              "justifyContent": "center",
              "width": "75%",
            }
          }
        />
        <Text
          style={
            {
              "backgroundColor": "#333333",
              "color": "white",
              "padding": 16,
              "textAlign": "center",
              "width": "75%",
            }
          }
        >
          #123 SOME NAME
        </Text>
      </View>
    </RCTScrollView>
    <View
      style={
        {
          "alignItems": "center",
          "columnGap": 16,
          "flexDirection": "row",
          "padding": 16,
        }
      }
    >
      <TextInput
        autoCorrect={false}
        defaultValue="Some query"
        inputMode="search"
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        returnKeyType="search"
        selectionColor="black"
        style={
          [
            {
              "flex": 1,
            },
            {
              "backgroundColor": "#52ae5f",
              "color": "black",
              "padding": 16,
            },
          ]
        }
        testID="search-query-input"
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
        testID="search-button"
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#333333",
              "borderRadius": 24,
              "height": 48,
              "justifyContent": "center",
              "width": 48,
            }
          }
        >
          <SvgMock
            height={24}
            width={24}
          />
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;
